--- a/card.html
+++ b/card.html
@@ -71,8 +71,12 @@
             background-color: hsla(210, 89%, 89%, 0.816);
             border-style: initial;
             cursor: pointer;
+            transition: background-color 0.3s ease, color 0.3s ease;
         }
-        
+        button:hover{
+            background-color: rgb(67, 47, 215);
+            color: rgb(98, 189, 241);
+        }
     </style>
 
 </head>
